--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -264,3 +264,10 @@ button.btn-ok {
     color: red;
     font-size: 1.5em;
 }
+
+
+.connexion {
+    color: white;
+    background-color: #58b2ec;
+}
+
